.provarCaches/00D6C0000000xA6UAI/objects/scss__Root_Post_Generation_Log__c.object
<CustomObject>
    <description>This objects keeps log for the batch generation of root parent posts</description>
    <fields>
        <fullName>scss__Current_Executing_Level__c</fullName>
        <label>Current Executing Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scss__Date_Completed__c</fullName>
        <label>Date Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>scss__Date_Started__c</fullName>
        <label>Date Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>scss__Process_Posts_Since__c</fullName>
        <description>Batch will process posts created from this time on</description>
        <label>Processing Since</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>scss__Progress_Status__c</fullName>
        <label>Progress Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Root Post Generation Log</label>
    <listViews>
        <fullName>scss__All</fullName>
        <columns>NAME</columns>
        <columns>scss__Date_Completed__c</columns>
        <columns>scss__Date_Started__c</columns>
        <columns>scss__Progress_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Root Post Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Root Post Generation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>